--- a/lecture25/style.css
+++ b/lecture25/style.css
@@ -2,5 +2,36 @@
     width: 300px;
     height: 300px;
     background-color: beige;
-    border: 2px soild black;
+    border: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: all 3s linear 1s;
 }
+
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box:hover{
+    /* transform: rotate(360deg);    Rotation*/
+    /* transform: scale(2);  Scaling */
+    /* transform: scale(0.5);
+    transform: rotate(-45deg); */
+
+    /*  */
+    /* transform: skew(-45deg);  Tilde property */
+    /* Translate Property */
+    /* transform: translate(400px); */
+    transform: translate(400px, 400px);
+}
+
+p{
+    font-size: 32px;
+}
+
