--- a/lecture26/style.css
+++ b/lecture26/style.css
@@ -5,8 +5,8 @@
 }
 
 .container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow-x: none;
     background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #ffffff 99%, #E0C3FC 100%);
@@ -19,12 +19,13 @@ nav {
 }
 
 .navContainter {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background-color: #112630;
+    background-image: linear-gradient(160deg, #112630 0%, #80D0C7 100%);
+
     min-height: 80px;
     position: relative;
 }
@@ -35,18 +36,20 @@ nav {
     list-style: none;
     font-size: 2.5rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+
 }
 
 #navLogo {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     color: white;
 }
 
 a {
     text-decoration: none;
     color: azure;
+    font-size: 2rem;
 }
 
 #navitems {
@@ -55,41 +58,97 @@ a {
 }
 
 
-.contentBox{
+.contentBox {
     width: 50%;
     margin: auto;
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 70px;
     background-color: white;
+    padding: 25px;
+    box-shadow: 0px 0px 30px black;
 }
 
-.item{
+.item {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.rightBox {
+    position: relative;
+    transition: all 0.3s linear 0s;
+}
+
+.rightBox img {
+    height: 330px;
+    border-radius: 20px;
+    width: 100%;
+    transition: all 0.6s linear 0s;
+    box-shadow: 1px 1px 10px black;
+    object-fit: cover;
+}
+
+.rightBox:hover {
+    transform: scale(1.1);
 }
 
 
+.leftBox {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 
+.leftBox h2 {
+    font-size: 1.6rem;
+}
 
+.ingBox {
+    font-size: 1.2rem;
+}
 
+.recipeBox {
+    font-size: 1rem;
+    cursor: pointer;
+}
 
-.footerBox{
-    
+.overLay {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    text-align: center;
+    height: 100%;
+    background-color: rgba(51, 46, 46, 0.689);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    opacity: 0;
+
+}
+
+.rightBox:hover .overLay {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.rightBox .overLay span {
+    color: white;
+    font-size: 1.2rem;
+}
+
+.footerBox {
+    width: 100%;
+    background-color: #112630;
+    background-image: linear-gradient(160deg, #112630 0%, #80D0C7 100%);
     min-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footerBox p {
     color: azure;
     font-size: 2rem;
 }
-
-
-
-
-
-
