--- a/lecture29/style.css
+++ b/lecture29/style.css
@@ -1,28 +1,96 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.body-container{
+
+.body-container {
     width: 100%;
     height: 100%;
 }
-.container{
+
+.container {
     max-width: 85vw;
     padding: 2rem 1rem;
     margin: 0 auto;
-    background-color: aqua; 
+    background-color: aqua;
 }
-.header-container{
+
+.header-container {
+    width: 100%;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-}
-.title {
-    font-size: 2.2rem;
-    font-weight: 700;
-}
-.sub-title{
     display: flex;
     justify-content: center;
-    width: 60%;
+    margin-bottom: 2.2rem;
+}
+
+.title {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    line-height: 2rem;
+}
+.sub-title{
+    max-width: 620px;
+   color: gray; 
+}
+
+/* .header-wrap {
+
+} */
+
+a{
+    text-decoration: none;
+}
+
+.main-container{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(4,fr);
+}
+
+.card-container{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(100, 96, 96);
+    border-radius: 2px;
+}
+.card-image-wrap{
+    position: relative;
+    overflow: hidden;
+    height: 14rem;
+}
+.card-img{
+    position: absolute;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+}
+.card-title-wrap{
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+}
+.card-container:hover .card-img{
+    transform: scale(1.1);
+    transition-duration: 200ms;
+}
+
+.card-title{
+    font-size: 1rem;
+    font-weight: 700;
+    color: rgb(40, 35, 35);
+    margin-bottom: 0.4rem;
+    line-height: 1.5rem;
+}
+
+.card-title-anchor:hover .card-title{
+    color: rgb(47, 47, 174);
+}
+
+.card-discription{
+    color: rgb(101, 83, 83);
+    font-size: 1rem;
 }
