--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -200,7 +200,23 @@ body {
     height: 100%;
 }
 
+.trusted-section{
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
 
+.trusted-containter{
+    margin-top: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.trusted-company-wrap{
+
+}
 
 
 
