--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -345,6 +345,25 @@ body {
     font-weight: 500;
 }
 
+.item-wrap1{
+    
+}
+.item-wrap2{
+ background-color: #fe567d;   
+}
+.item-wrap3{
+    background-color: #fbb74e;
+}
+.item-wrap4{
+    background-color: #3bb6ba;
+}
+.item-wrap5{
+    background-color: #3bb6ba;
+}
+.item-wrap6{
+    background-color: #5a5684;
+}
+
 
 
 
