--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -277,13 +277,14 @@ body {
     width: 100%;
     height: 100%;
     background-color: var(--light-gray);
-    margin: 2rem 0rem;
+    margin: 0rem 0rem 2rem 0rem;
     padding: 2rem 0rem;
 }
 
 .card-container {
     width: 700px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
@@ -305,6 +306,10 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
+}
+.card-heading-box{
+    display: flex;
+    flex-direction: column;
 }
 
 .card-wrapper {
@@ -344,6 +349,9 @@ body {
     font-size: 0.95rem;
     font-weight: 500;
 }
+
+
+
 
 .item-wrap1{
     
@@ -429,6 +437,13 @@ body {
 @media screen and (max-width:768px) {
     .menu-button {
         display: block;
+    }
+    .card{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .card-container {
+        width: auto;
+        margin: 0 1rem;
     }
 
 }
