--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -366,7 +366,7 @@ body {
     background-color: #3bb6ba;
 }
 .item-wrap5{
-    background-color: #3bb6ba;
+    background-color:#6ca652;
 }
 .item-wrap6{
     background-color: #5a5684;
