--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -440,6 +440,43 @@ body {
     color: #777;
 }
 
+/* News section Start */
+
+.newsLetter-container {
+    background-color: var(--background-color);
+    padding: 2rem;
+    width: 1100px;
+    height: 35vh;
+}
+
+.newsLetter-content {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--gray);
+    height: 100%;
+}
+
+.news-left {
+    width: 50%;
+    height: 100%;
+}
+
+.news-left img {
+    width: 100%;
+    height: 100%;
+}
+
+.news-right {
+    width: 50%;
+    height: 100%;
+}
+
+
+
+
+
+
+/* News section End */
 
 
 
