--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -444,15 +444,16 @@ body {
 
 .newsLetter-container {
     background-color: var(--background-color);
-    padding: 2rem;
+    padding: 3rem 2rem;
     width: 1100px;
-    height: 35vh;
+    height: 60vh;
+    margin: 0 auto;
 }
 
 .newsLetter-content {
     display: flex;
     flex-direction: row;
-    background-color: var(--gray);
+    background-color: var(--light-gray);
     height: 100%;
 }
 
@@ -464,11 +465,17 @@ body {
 .news-left img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .news-right {
+    padding: 2rem;
     width: 50%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
