--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -455,6 +455,8 @@ body {
     flex-direction: row;
     background-color: var(--light-gray);
     height: 100%;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .news-left {
@@ -470,13 +472,27 @@ body {
 }
 
 .news-right {
-    padding: 2rem;
-    width: 50%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+    padding: 2rem;
+    width: 50%;
+    height: 100%;
 }
+
+.news-letter {
+    font-size: 2.1em;
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
+.news-desc {
+    text-align: left;
+}
+
+
 
 
 
