--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -462,9 +462,13 @@ body {
 .news-left {
     width: 50%;
     height: 100%;
+    position: relative;
+    display: none;
 }
 
 .news-left img {
+    position: absolute;
+    inset: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -490,10 +494,56 @@ body {
 
 .news-desc {
     text-align: left;
+    color: #777;
+    font-size: 0.9rem;
+}
+
+.news-form {
+    display: flex;
+    margin-bottom: 1rem;
+    gap: 0.6rem;
 }
 
 
+.news-email {
+    background-color: var(--background-color);
+    color: #333;
+    width: 100%;
+    padding: 0.5rem 0.75rem;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    outline: none;
+}
 
+.news-email:focus {
+    border-color: #2536eb;
+    box-shadow: 0 4px 8px rgb(0, 0, 0, 0.3);
+}
+
+.news-send-button {
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    border: none;
+    border-radius: 0.3rem;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
+.news-send-button:hover {
+    background-color: var(--link-color);
+    box-shadow: 0 4px 8px rgb(0, 0, 0, 0.4);
+}
+
+.privacy-policy {
+    text-align: left;
+    font-size: 0.75rem;
+    color: #777;
+}
+
+.news-link {
+    color: #2536eb;
+    text-decoration: underline;
+}
 
 
 
@@ -583,5 +633,14 @@ body {
 
     .trusted-company-wrap {
         grid-template-columns: repeat(4, 1fr);
+    }
+
+    .news-left {
+        display: block;
+    }
+
+    .newsLetter-container {
+        width: auto;
+        margin: 0 1rem;
     }
 }
