--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -463,7 +463,7 @@ body {
     width: 50%;
     height: 100%;
     position: relative;
-    display: none;
+    /* display: none; */
 }
 
 .news-left img {
@@ -536,7 +536,7 @@ body {
 
 .privacy-policy {
     text-align: left;
-    font-size: 0.75rem;
+    font-size: 0.7rem;
     color: #777;
 }
 
@@ -550,12 +550,6 @@ body {
 
 
 /* News section End */
-
-
-
-
-
-
 
 
 
@@ -626,6 +620,10 @@ body {
         margin: 0 1rem;
     }
 
+    .news-left {
+        display: block;
+    }
+
 }
 
 
@@ -639,8 +637,8 @@ body {
         display: block;
     }
 
-    .newsLetter-container {
+    /* .newsLetter-container {
         width: auto;
         margin: 0 1rem;
-    }
+    } */
 }
