--- a/lecture33/style.css
+++ b/lecture33/style.css
@@ -545,9 +545,34 @@ body {
     text-decoration: underline;
 }
 
-
-
 /* News section End */
+
+/* Footer section start */
+.footer-container {
+    background-color: var(--background-color);
+    margin: 0 auto;
+    padding: 0 2rem;
+    display: flex;
+    flex-direction: column;
+    max-width: 1100px;
+}
+
+.footer {
+    max-width: 1100px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: left;
+}
+
+.footer-top {
+    width: 34%;
+}
+
+
+
+
+/* Footer section end */
 
 
 
